# eos-base

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  check.sh  init.rc  init_drivers.rc
aarch64-unknown-redox/: init_drivers.rc
audiod/: Cargo.toml
audiod/src/: main.rs  scheme.rs
bootstrap/: Cargo.toml  build.rs
bootstrap/src/: exec.rs  initfs.rs  initnsmgr.rs  lib.rs  procmgr.rs  start.rs
config/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: lib.rs
drivers/: README.md
drivers/acpid/: Cargo.toml
drivers/acpid/src/: main.rs  scheme.rs
drivers/amlserde/: Cargo.toml
drivers/audio/ac97d/: Cargo.toml
drivers/audio/ac97d/src/: device.rs  main.rs
drivers/audio/ihdad/: Cargo.toml
drivers/audio/ihdad/src/: main.rs
drivers/audio/ihdad/src/hda/: device.rs
drivers/audio/sb16d/: Cargo.toml
drivers/audio/sb16d/src/: device.rs  main.rs
drivers/common/: Cargo.toml
drivers/common/src/: lib.rs  logger.rs  sgl.rs
drivers/common/src/io/: mmio_ptr.rs
drivers/executor/: Cargo.toml
drivers/executor/src/: lib.rs
drivers/graphics/bgad/: Cargo.toml
drivers/graphics/bgad/src/: main.rs  scheme.rs
drivers/graphics/console-draw/: Cargo.toml
drivers/graphics/console-draw/src/: lib.rs
drivers/graphics/driver-graphics/: Cargo.toml
drivers/graphics/driver-graphics/src/: connector.rs  lib.rs  objects.rs  properties.rs
drivers/graphics/driver-graphics/src/ioctl/: cursor.rs  framebuffer.rs  mod.rs  property.rs
drivers/graphics/driver-graphics/src/kms/: connector.rs  objects.rs  properties.rs
drivers/graphics/fbbootlogd/: Cargo.toml
drivers/graphics/fbbootlogd/src/: main.rs  scheme.rs
drivers/graphics/fbcond/: Cargo.toml
drivers/graphics/fbcond/src/: display.rs  main.rs  scheme.rs  text.rs
drivers/graphics/graphics-ipc/: Cargo.toml
drivers/graphics/graphics-ipc/src/: lib.rs  v1.rs  v2.rs
drivers/graphics/ihdgd/: Cargo.toml
drivers/graphics/ihdgd/src/: main.rs
drivers/graphics/ihdgd/src/device/: buffer.rs  mod.rs  pipe.rs  scheme.rs
drivers/graphics/vesad/: Cargo.toml
drivers/graphics/vesad/src/: main.rs  scheme.rs
drivers/graphics/virtio-gpud/: Cargo.toml
drivers/graphics/virtio-gpud/src/: main.rs  scheme.rs
drivers/hwd/: Cargo.toml
drivers/hwd/src/backend/: acpi.rs
drivers/input/ps2d/: Cargo.toml
drivers/input/ps2d/src/: controller.rs
drivers/input/usbhidd/: Cargo.toml
drivers/input/usbhidd/src/: descs.rs  main.rs  overrides.rs  reqs.rs
drivers/inputd/: Cargo.toml
drivers/inputd/src/: keymap.rs  lib.rs  main.rs
drivers/net/driver-network/: Cargo.toml
drivers/net/driver-network/src/: lib.rs
drivers/net/e1000d/: Cargo.toml
drivers/net/e1000d/src/: main.rs
drivers/net/ixgbed/: Cargo.toml
drivers/net/ixgbed/src/: main.rs
drivers/net/rtl8139d/: Cargo.toml
drivers/net/rtl8139d/src/: main.rs
drivers/net/rtl8168d/: Cargo.toml
drivers/net/rtl8168d/src/: main.rs
drivers/net/usbnetd/: Cargo.toml
drivers/net/usbnetd/src/: main.rs
drivers/net/virtio-netd/: Cargo.toml
drivers/net/virtio-netd/src/: main.rs
drivers/pcid/: Cargo.toml
drivers/pcid-spawner/: Cargo.toml
drivers/pcid-spawner/src/: main.rs
drivers/pcid/src/: main.rs  scheme.rs
drivers/pcid/src/driver_interface/: mod.rs
drivers/redoxerd/: Cargo.toml
drivers/redoxerd/src/: main.rs
drivers/rng/virtio-rngd/: Cargo.toml  config.toml
drivers/rng/virtio-rngd/src/: main.rs
drivers/rtcd/: Cargo.toml
drivers/rtcd/src/: main.rs
drivers/storage/ahcid/: Cargo.toml
drivers/storage/ahcid/src/: main.rs
drivers/storage/bcm2835-sdhcid/: Cargo.toml
drivers/storage/bcm2835-sdhcid/src/: main.rs
drivers/storage/driver-block/: Cargo.toml
drivers/storage/driver-block/src/: lib.rs
drivers/storage/ided/: Cargo.toml
drivers/storage/lived/: Cargo.toml
drivers/storage/nvmed/: Cargo.toml
drivers/storage/nvmed/src/: main.rs
drivers/storage/raid1d/: Cargo.toml
drivers/storage/raid1d/src/: main.rs
drivers/storage/usbscsid/: Cargo.toml
drivers/storage/usbscsid/src/: main.rs
drivers/storage/virtio-blkd/: Cargo.toml
drivers/storage/virtio-blkd/src/: main.rs
drivers/usb/usbctl/: Cargo.toml
drivers/usb/usbhubd/: Cargo.toml
drivers/usb/xhcid/: Cargo.toml  drivers.toml
drivers/usb/xhcid/src/: driver_interface.rs  main.rs
drivers/usb/xhcid/src/xhci/: device_enumerator.rs  irq_reactor.rs  mod.rs  scheme.rs
drivers/vboxd/: Cargo.toml
drivers/vboxd/src/: main.rs
drivers/virtio-core/: Cargo.toml
drivers/virtio-core/src/: probe.rs  transport.rs
drivers/virtio-core/src/arch/: aarch64.rs  riscv64.rs  x86.rs
init/: Cargo.toml
init.d/: 00_base.target  00_fbcond.service  00_logging_ramfs.service  00_nulld.service  00_randd.service  00_rtcd.service  00_runtime  00_runtime.target  00_zerod.service  10_inputd.service  10_lived.service  10_logging  10_smolnetd.service  20_fbbootlogd.service  20_fbcond.service  20_graphics  20_graphics.target  20_vesad.service  30_live  40_drivers  40_hwd.service  50_rootfs  90_exit_initfs  90_exit_initfs.switchroot
init.d.aarch64-unknown-redox/: 40_drivers  40_drivers.raspi3bp
init.initfs.d/: 20_graphics.target  40_drivers.target
init/src/: main.rs  scheduler.rs  script.rs  service.rs  unit.rs
initfs/: Cargo.toml
initfs/archive-common/src/: lib.rs
initfs/src/: lib.rs  types.rs
initfs/tools/: Cargo.toml  out.img
initfs/tools/src/: lib.rs
initfs/tools/tests/: archive_and_read.rs
ipcd/: Cargo.toml
ipcd/src/: chan.rs  main.rs  shm.rs
ipcd/src/uds/: dgram.rs  stream.rs
logd/: Cargo.toml
logd/src/: main.rs  scheme.rs
netstack/: Cargo.toml
netstack/src/: logger.rs
netstack/src/scheme/: icmp.rs  ip.rs  mod.rs  socket.rs  tcp.rs  udp.rs
netstack/src/scheme/netcfg/: mod.rs
ptyd/: Cargo.toml
ptyd/src/: controlterm.rs  main.rs  pgrp.rs  ptflow.rs  ptflush.rs  ptlock.rs  ptname.rs  ptsendbreak.rs  pty.rs  scheme.rs
ramfs/: Cargo.toml
ramfs/src/: main.rs  scheme.rs
randd/: Cargo.toml
randd/src/: main.rs
scheme-utils/: Cargo.toml
scheme-utils/src/: blocking.rs  lib.rs  readiness_based.rs
zerod/: Cargo.toml
zerod/src/: main.rs  scheme.rs
