[package]
name = "init"
description = "Userspace process launcher"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
libredox.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true

config = { path = "../config" }
daemon = { path = "../daemon" }

[lints]
workspace = true
