[package]
name = "hwd"
description = "ACPI and DeviceTree handling daemon"
version = "0.1.0"
edition = "2018"

[dependencies]
fdt = "0.1.5"
log.workspace = true
ron = "0.8.1"
libredox = { workspace = true, default-features = false, features = ["std", "call"] }

amlserde = { path = "../amlserde" }
common = { path = "../common" }
daemon = { path = "../../daemon" }

[lints]
workspace = true
