[package]
name = "ac97d"
description = "AC'97 driver"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
libredox.workspace = true
log.workspace = true
redox_event.workspace = true
redox_syscall.workspace = true
spin = "0.9"

daemon = { path = "../../../daemon" }
pcid = { path = "../../pcid" }
redox-scheme.workspace = true

[lints]
workspace = true
