[package]
name = "driver-graphics"
description = "Shared video and graphics code library"
version = "0.1.0"
edition = "2021"

[dependencies]
drm-sys.workspace = true
#TODO: edid is abandoned, fork it an maintain?
edid = "0.3.0"
log.workspace = true
redox-scheme.workspace = true
redox_syscall.workspace = true
libredox.workspace = true

common = { path = "../../common" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }

[lints]
workspace = true
