[package]
name = "graphics-ipc"
description = "Shared graphics IPC code library"
version = "0.1.0"
edition = "2021"

[dependencies]
drm.workspace = true
log.workspace = true
libredox.workspace = true
plain = "0.2"
redox-ioctl.workspace = true

common = { path = "../../common" }

[lints]
workspace = true
