[package]
name = "vesad"
version = "0.1.0"
edition = "2021"

[dependencies]
drm-sys.workspace = true
orbclient.workspace = true
ransid = "0.4"
redox_syscall.workspace = true
redox_event.workspace = true

common = { path = "../../common" }
daemon = { path = "../../../daemon" }
driver-graphics = { path = "../driver-graphics" }
graphics-ipc = { path = "../graphics-ipc" }
libredox.workspace = true

[features]
default = []

[lints]
workspace = true
