[package]
name = "driver-network"
description = "Shared networking code library"
version = "0.1.0"
edition = "2021"

[dependencies]
libredox.workspace = true
daemon = { path = "../../../daemon" }
redox-scheme.workspace = true
redox_syscall = { workspace = true, features = ["std"] }

[lints]
workspace = true
